tests/error/template_unknown.gw
#! [contains] Invalid variable unknown_type
fun void my_function:[A]() { <<< "test" >>>; }

my_function:[unknown_type]();
